<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.rehnuma.implicitwebbrowserintent.fourthActivity">
    <Button
        android:id="@+id/kidney1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kidney1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindKidneyHospitals"/>
    <Button
        android:id="@+id/kidney2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kidney2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindKidneyHospitals"/>
    <Button
        android:id="@+id/kidney3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kidney3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindKidneyHospitals"/>

</LinearLayout>
