<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.rehnuma.implicitwebbrowserintent.secondActivity">
    <Button
        android:id="@+id/cardiac1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardiac1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindCardiacHospitals"/>
    <Button
        android:id="@+id/cardiac2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardiac2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindCardiacHospitals"/>
    <Button
        android:id="@+id/cardiac3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardiac3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClickFindCardiacHospitals"/>


</LinearLayout>
